build/00016/H4P_PresenceDetectIP_ONOFF_Inverted_esp32.log
Processing esp32 (board: esp32doit-devkit-v1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (55.3.35) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting H4P_PresenceDetectIP_ONOFF_Inverted.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.8ab2fed
Building in release mode
Compiling .pio/build/esp32/src/H4P_PresenceDetectIP_ONOFF_Inverted.ino.cpp.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-gpio.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-hosted.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-i2c-ng.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-i2c-slave.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-i2c.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-ledc.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-matrix.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-misc.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-periman.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-psram.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-rgb-led.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-rmt.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-sigmadelta.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-spi.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-time.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-timer.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-tinyusb.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-touch-ng.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-touch.c.o
Compiling .pio/build/esp32/FrameworkArduino/esp32-hal-uart.c.o
Compiling .pio/build/esp32/FrameworkArduino/firmware_msc_fat.c.o
Compiling .pio/build/esp32/FrameworkArduino/freertos_stats.cpp.o
Compiling .pio/build/esp32/FrameworkArduino/libb64/cdecode.c.o
Compiling .pio/build/esp32/FrameworkArduino/libb64/cencode.c.o
Compiling .pio/build/esp32/FrameworkArduino/main.cpp.o
Compiling .pio/build/esp32/FrameworkArduino/stdlib_noniso.c.o
Compiling .pio/build/esp32/FrameworkArduino/wiring_pulse.c.o
Compiling .pio/build/esp32/FrameworkArduino/wiring_shift.c.o
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4P_PresenceDetectIP_ONOFF_Inverted.ino:27:2: error: #error The sketch is not supported outside ESP8266 currently
   27 | #error The sketch is not supported outside ESP8266 currently
      |  ^~~~~
*** [.pio/build/esp32/src/H4P_PresenceDetectIP_ONOFF_Inverted.ino.cpp.o] Error 1
========================= [FAILED] Took 10.48 seconds =========================
Environment    Status    Duration
-------------  --------  ------------
esp32          FAILED    00:00:10.483
==================== 1 failed, 0 succeeded in 00:00:10.483 ====================